# spotification

./: create_kernel.sh  pyproject.toml
data_handler/: .cache  artists_network.ipynb
data_handler/.ipynb_checkpoints/: artists_network-checkpoint.ipynb
spotification/: constants.py
