[tool.poetry]
name = "spotification"
version = "0.1.0"
description = ""
authors = ["Classical Voltage <info@classicalvoltage.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
SciPy = "^1.11.4"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
